--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
 // utils
-@import './utils/vars';
+@import './utils/variables';
 @import './utils/visually-hidden';
 
 // base
@@ -7,18 +7,16 @@
 @import './base/container';
 
 // components 
+@import './components/header';
+@import './components/baner';
+@import './components/modal';
+@import './components/options';
+@import './components/work';
+@import './components/command';
+@import './components/client';
+@import './components/footer';
 
-
-// loyouts
-@import './loyouts/header';
-@import './loyouts/baner';
-@import './loyouts/modal';
-@import './loyouts/options';
-@import './loyouts/work';
-@import './loyouts/command';
-@import './loyouts/client';
-@import './loyouts/footer';
 
 // portfolio
-@import './loyouts/portfolio-btn';
-@import './loyouts/portfolio-work';
+@import './components/portfolio-btn';
+@import './components/portfolio-work';
