--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import './base/common';
 @import './base/container';
 
+// index
 // components 
 @import './components/header';
 @import './components/baner';
@@ -17,6 +18,7 @@
 @import './components/footer';
 
 
-// portfolio
+// portfolio 
+// components
 @import './components/portfolio-btn';
 @import './components/portfolio-work';
