--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -15,10 +15,10 @@
     opacity: 0;
     pointer-events: none;
     visibility: hidden;
-}
 
-.is-hidden .modal {
-    transform: scale(0.9) translate(-50%, -50%);
+    .modal {
+        transform: scale(0.9) translate(-50%, -50%);
+    }
 }
 
 .modal {
@@ -58,11 +58,11 @@
     background-color: #ffffff;
     fill: #000000;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.icon-close:focus,
-.icon-close:hover {
-    fill: var(--accent-color);
+    &:focus,
+    &:hover {
+        fill: var(--accent-color);
+    }
 }
 
 .form-name {
@@ -90,12 +90,6 @@ textarea {
     letter-spacing: 0.01em;
 }
 
-.form-field input {
-    padding-left: 42px;
-    height: 40px;
-    width: 448px;
-}
-
 .form-field {
     position: relative;
     display: flex;
@@ -103,25 +97,31 @@ textarea {
     margin-bottom: 10px;
     margin-left: 40px;
     margin-right: 40px;
-}
 
-.form-field label {
-    margin-top: 0;
-    margin-bottom: 0;
+    input {
+        padding-left: 42px;
+        height: 40px;
+        width: 448px;
+    }
 
-    margin-bottom: 4px;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.16;
-    text-align: left;
+    label {
+        margin-top: 0;
+        margin-bottom: 0;
 
-    letter-spacing: 0.01em;
+        margin-bottom: 4px;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16;
+        text-align: left;
 
-    color: #757575;
-}
+        letter-spacing: 0.01em;
 
-.form-field~.form-icon {
-    fill: var(--accent-color);
+        color: #757575;
+    }
+
+    form-icon {
+        fill: var(--accent-color);
+    }
 }
 
 .form-comment {
@@ -130,71 +130,48 @@ textarea {
     margin-bottom: 20px;
     margin-left: 40px;
     margin-right: 40px;
+
+    label {
+        margin-top: 0;
+        margin-bottom: 0;
+
+        margin-bottom: 4px;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16;
+        text-align: left;
+
+        letter-spacing: 0.01em;
+
+        color: #757575;
+    }
 }
 
-.form-comment label {
-    margin-top: 0;
-    margin-bottom: 0;
+.check {
+    label {
+        padding-top: 0;
+        padding-bottom: 0;
 
-    margin-bottom: 4px;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.16;
-    text-align: left;
+        font-size: 14px;
+        line-height: 1.71;
 
-    letter-spacing: 0.01em;
+        letter-spacing: 0.03em;
 
-    color: #757575;
-}
+        color: #757575;
+    }
 
-.check label {
-    padding-top: 0;
-    padding-bottom: 0;
+    a {
+        padding-top: 0;
+        padding-bottom: 0;
 
-    font-size: 14px;
-    line-height: 1.71;
+        font-size: 14px;
+        line-height: 1.71;
 
-    letter-spacing: 0.03em;
+        letter-spacing: 0.03em;
+        text-decoration-line: underline;
 
-    color: #757575;
-}
-
-.check a {
-    padding-top: 0;
-    padding-bottom: 0;
-
-    font-size: 14px;
-    line-height: 1.71;
-
-    letter-spacing: 0.03em;
-    text-decoration-line: underline;
-
-    color: #2196f3;
-}
-
-.form-button {
-    min-width: 200px;
-    height: 50px;
-    border: none;
-
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-
-    letter-spacing: 0.06em;
-
-    color: #ffffff;
-
-    background: #2196f3;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form-button:hover,
-.form-button:focus {
-    background: #188ce8;
+        color: #2196f3;
+    }
 }
 
 .form-icon {
@@ -205,52 +182,54 @@ textarea {
     fill: #212121;
 }
 
-.modal-input:focus~.form-icon {
-    fill: var(--accent-color);
-}
-
 .modal-input {
     outline-style: none;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+
+    &:focus~.form-icon {
+        fill: var(--accent-color);
+    }
+
+    &:focus {
+        border: 1px solid var(--accent-color);
+    }
 }
 
-.modal-input:focus {
-    border: 1px solid var(--accent-color);
+
+.checkbox {
+    display: flex;
+    align-items: center;
+
+    .icon-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 16px;
+        height: 15px;
+        margin-right: 8px;
+
+        border: 2px solid #000000;
+        border-radius: 2px;
+    }
+
+    .agree-icon {
+        fill: transparent;
+    }
+
 }
 
 .check-line {
     margin-bottom: 30px;
     margin-left: 51px;
     text-align: left;
-}
 
-.checkbox {
-    display: flex;
-    align-items: center;
-}
+    input:checked+.checkbox .icon-wrapper {
+        background-color: var(--accent-color);
+        border: none;
+    }
 
-.checkbox .icon-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 16px;
-    height: 15px;
-    margin-right: 8px;
-
-    border: 2px solid #000000;
-    border-radius: 2px;
-}
-
-.checkbox .agree-icon {
-    fill: transparent;
-}
-
-.check-line input:checked+.checkbox .icon-wrapper {
-    background-color: var(--accent-color);
-    border: none;
-}
-
-.check-line input:checked+.checkbox .agree-icon {
-    fill: var(--primary-fon-color);
+    input:checked+.checkbox .agree-icon {
+        fill: var(--primary-fon-color);
+    }
 }
