--- a/css/main.css
+++ b/css/main.css
@@ -828,8 +828,7 @@ header {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.client-link:hover,
-.client-link:focus {
+.client-link:hover, .client-link:focus {
   fill: #2196f3;
   border: 1px solid var(--accent-color);
 }
@@ -896,8 +895,7 @@ footer {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.address-nav .link:hover,
-.address-nav .link:focus {
+.address-nav .link:hover, .address-nav .link:focus {
   color: var(--accent-color);
 }
 
@@ -927,12 +925,10 @@ footer {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-link:hover,
-.nav-link:focus {
+.nav-link:hover, .nav-link:focus {
   color: var(--accent-color);
 }
 
-/* Приєднуйтесь */
 /* Форма в футері */
 .box-form {
   display: block;
@@ -965,8 +961,7 @@ footer {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-form-label:hover,
-.footer-form-label:focus {
+.footer-form-label:hover, .footer-form-label:focus {
   border: 1px solid var(--accent-color);
 }
 
