--- a/sass/layouts/_client.scss
+++ b/sass/layouts/_client.scss
@@ -25,12 +25,12 @@
     border-radius: 4px;
 
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.client-link:hover,
-.client-link:focus {
+    &:hover,
+    &:focus {
     fill: #2196f3;
     border: 1px solid var(--accent-color);
+    }
 }
 
 .icon-client {
