--- a/sass/layouts/_command.scss
+++ b/sass/layouts/_command.scss
@@ -32,18 +32,18 @@
 
 .command-list {
     display: flex;
-}
 
-.command-list .item+.item {
-    margin-left: 30px;
-}
+    .item+.item {
+        margin-left: 30px;
+    }
 
-.command-list .item {
+    .item {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
+    0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 
     background: var(--primary-fon-color);
+    }
 }
 
 .content {
