--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -29,23 +29,23 @@ footer {
 
 .address-nav {
     width: 231px;
-}
 
-.address-nav .link {
-    font-family: 'Roboto';
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    font-style: initial;
+    .link {
+        font-family: 'Roboto';
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+        font-style: initial;
 
-    color: var(--h1-text-color);
+        color: var(--h1-text-color);
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.address-nav .link:hover,
-.address-nav .link:focus {
-    color: var(--accent-color);
+        &:hover,
+        &:focus {
+        color: var(--accent-color);
+        }
+    }
 }
 
 .addres-https {
@@ -73,15 +73,12 @@ footer {
     color: rgba(255, 255, 255, 0.6);
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+    }
 }
-
-.nav-link:hover,
-.nav-link:focus {
-    color: var(--accent-color);
-}
-
-/* Приєднуйтесь */
-
 
 
 /* Форма в футері */
@@ -116,20 +113,20 @@ footer {
     border-radius: 4px;
 
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.footer-form-label:hover,
-.footer-form-label:focus {
+    &:hover,
+    &:focus {
     border: 1px solid var(--accent-color);
-}
+    }
 
-.footer-form-label placeholder {
+    placeholder {
     font-size: 16px;
     line-height: 1.25;
 
     letter-spacing: 0.03em;
 
     color: rgba(255, 255, 255, 0.6);
+    }
 }
 
 .form-item {
