--- a/sass/layouts/_work.scss
+++ b/sass/layouts/_work.scss
@@ -19,10 +19,10 @@
 
 .work-list {
     display: flex;
-}
 
-.work-list .item+.item {
-    margin-left: 30px;
+    .item+.item {
+        margin-left: 30px;
+    }
 }
 
 .item-img {
