--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -30,32 +30,34 @@ header {
 .site-nav {
     display: flex;
     margin-left: 93px;
-}
 
-.site-nav .item+.item {
-    margin-left: 50px;
-}
+    .item+.item {
+        margin-left: 50px;
+    }
 
-.site-nav .link {
-    display: block;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    .link {
+        display: block;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+        padding-top: 32px;
+        padding-bottom: 32px;
 
-    color: #212121;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+        color: #212121;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.site-nav .link:hover,
-.site-nav .link:focus {
-    color: var(--accent-color);
-}
+        current {
+            color: var(--accent-color);
+        }
+    }
 
-.site-nav .link.current {
-    color: var(--accent-color);
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+    }
+
+
 }
 
 .link.current {
@@ -79,21 +81,21 @@ header {
 .contacts-nav {
     display: flex;
     margin-left: auto;
-}
 
-.contacts-nav .item+.item {
-    margin-left: 50px;
-}
+    .item+.item {
+        margin-left: 50px;
+    }
 
-.contacts-nav a {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+    a {
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
 
-    color: var(--primary-text-color);
+        color: var(--primary-text-color);
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
 
 .icon-header {
@@ -102,8 +104,11 @@ header {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-link:hover,
-.contact-link:focus {
-    color: var(--accent-color);
-    fill: var(--accent-color);
+.contact-link {
+
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+        fill: var(--accent-color);
+    }
 }
