--- a/sass/layouts/_portfolio-work.scss
+++ b/sass/layouts/_portfolio-work.scss
@@ -7,17 +7,15 @@
     flex-wrap: wrap;
 }
 
-.portfolio-element:not(:nth-child(3n)) {
-    margin-right: 30px;
-}
+.portfolio-element {
+    &:not(:nth-child(3n)) {
+        margin-right: 30px;
+    }
 
-.portfolio-element:not(:nth-last-child(-n + 3)) {
-    margin-bottom: 30px;
-}
+    &:not(:nth-last-child(-n + 3)) {
+        margin-bottom: 30px;
+    }
 
-.portfolio-item {
-    display: block;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item-box {
@@ -25,10 +23,22 @@
     overflow: hidden;
 }
 
-.portfolio-item:hover .portfolio-ofrlay,
-.portfolio-item:focus .portfolio-ofrlay {
-    transform: translateY(0);
-    opacity: 1;
+.portfolio-item {
+    display: block;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus .portfolio-ofrlay {
+        transform: translateY(0);
+        opacity: 1;
+    }
+
+    &:hover,
+    &:focus {
+        opacity: 1;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+            1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
 }
 
 .portfolio-ofrlay {
@@ -69,12 +79,6 @@
     color: var(--h1-text-color);
 }
 
-.portfolio-item:hover,
-.portfolio-item:focus {
-    opacity: 1;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
-}
 
 .section-portfolio {
     padding: 20px 15px;
