--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -24,7 +24,7 @@
 }
 
 // baner-button
-.baner-button {
+.hero__button {
     border-radius: 4px;
     padding: 10px 32px;
     min-width: 216px;
@@ -49,7 +49,7 @@
 
 // footer-form-button
 
-.footer-form-button {
+.form__button {
     align-items: center;
     display: flex;
 
@@ -76,7 +76,7 @@
     border-radius: 4px;
 }
 
-.footer-form-icon {
+.form__icon {
     margin-left: 10px;
     width: 24px;
     height: 24px;
