--- a/sass/layouts/_client.scss
+++ b/sass/layouts/_client.scss
@@ -13,7 +13,12 @@
     color: var(--nav-primary-text-color);
 }
 
-.client-link {
+.client__icons {
+    display: flex;
+    justify-content: space-between;
+}
+
+.client__link {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -33,13 +38,8 @@
     }
 }
 
-.icon-client {
+.client__svg {
     width: 106px;
     height: 66px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.client-icons {
-    display: flex;
-    justify-content: space-between;
 }
