--- a/sass/layouts/_command.scss
+++ b/sass/layouts/_command.scss
@@ -1,10 +1,10 @@
 /* Наша команда */
 
-.command-color {
+.command {
     background-color: #f5f4fa;
 }
 
-.command-title {
+.command__title {
     margin-top: 0;
     margin-bottom: 50px;
 
@@ -17,7 +17,30 @@
     color: var(--title-text-color);
 }
 
-.surname-title {
+.command__list {
+    display: flex;
+
+    .command__item+.command__item {
+        margin-left: 30px;
+    }
+
+    .command__item {
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+            0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 0px 0px 4px 4px;
+
+        background: var(--primary-fon-color);
+    }
+}
+
+.command__content {
+    padding-top: 30px;
+    padding-left: 10px;
+
+    padding-right: 10px;
+}
+
+.command__surname__title {
     margin-top: 0;
     margin-bottom: 10px;
 
@@ -30,30 +53,7 @@
     color: var(--nav-primary-text-color);
 }
 
-.command-list {
-    display: flex;
-
-    .item+.item {
-        margin-left: 30px;
-    }
-
-    .item {
-        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-            0px 2px 1px rgba(0, 0, 0, 0.2);
-        border-radius: 0px 0px 4px 4px;
-
-        background: var(--primary-fon-color);
-    }
-}
-
-.content {
-    padding-top: 30px;
-    padding-left: 10px;
-
-    padding-right: 10px;
-}
-
-.position {
+.command__position {
     margin-top: 0;
     margin-bottom: 16px;
 
